<resources>
    <string name="app_name">clonTelegramm3</string>

    <!--SettingsFragment-->
    <string name="settings_user_name">Ivan Ivanov</string>
    <string name="settings_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="default_number">+38 095 000 00 00</string>
    <string name="phone_label">Нажмите чтобы изменить номар телефона</string>
    <string name="login">Ivan Ivanov</string>
    <string name="login_label">Имя пользователя</string>
    <string name="about">О себе</string>
    <string name="label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Fragment enter code-->
    <string name="enter_text">Введите текст</string>
    <string name="register_text_we_send">Мы отправили SMS c кодом проверки на Ваш телефон</string>
    <string name="register_hint_default">- - - - - -</string>
    <!--RegisterActivity-->
    <string name="register_action_toolbar_tittle">Ваш телефон</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="strings_hint_input_name">Name</string>
    <string name="settings_hint_input_surname">Last name</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">\"Данные обновлены \"</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">BIO</string>
    <string name="clear_chat">очистить чат</string>
    <string name="delete_chat">удалить чат</string>
    <string name="create_group">Создать Группу</string>


    <string name="one_people"> %d участник</string>
    <string name="few_people">%d участника</string>
    <string name="other_people">%d участников</string>


</resources>