<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_settings_photo"
            android:layout_width="@dimen/settings_photo_W"
            android:layout_height="@dimen/settings_photo_H"
            android:layout_margin="@dimen/settings_photo_layout_margin"
            android:padding="@dimen/settings_photo_padding"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circle_image"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/settings_photo_stroke" />

        <TextView
            android:id="@+id/tv_setting_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_text_layout_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/settings_normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_settings_photo"
            app:layout_constraintTop_toTopOf="@id/iv_settings_photo"
            tools:text="@string/settings_user_name" />

        <TextView
            android:id="@+id/tv_settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_text_layout_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/settings_small_text_status"
            app:layout_constraintBottom_toBottomOf="@id/iv_settings_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_settings_photo"
            tools:text="@string/settings_status" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/settings_text_account"
        android:textColor="@color/primary"
        android:textSize="@dimen/settings_small_text_status"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_button"
        style="@style/settingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_text_account">

        <TextView
            android:id="@+id/tv_phone_number"
            style="@style/normalText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/default_number" />

        <TextView
            android:id="@+id/tv_phone_label"
            style="@style/smallText"
            android:text="@string/phone_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_button_change_user_name"
        style="@style/settingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_button">

        <TextView
            android:id="@+id/tv_login"
            style="@style/normalText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/login" />

        <TextView
            android:id="@+id/tv_settings_user_name_label"
            style="@style/smallText"
            android:text="@string/login_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_user_name_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_button_about"
        style="@style/settingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_button_change_user_name">

        <TextView
            android:id="@+id/tv_bio"
            style="@style/normalText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/about" />

        <TextView
            android:id="@+id/tv_label_bio"
            style="@style/smallText"
            android:text="@string/label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bio" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_bio" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_settings_change_photo"
        android:layout_width="@dimen/settings_camera_W"
        android:layout_height="@dimen/settings_camera_H"
        android:layout_margin="@dimen/settings_photo_layout_margin"
        android:background="@color/primary"
        android:padding="@dimen/settings_photo_padding"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
        app:shapeAppearanceOverlay="@style/circle_image"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/settings_photo_stroke" />


</androidx.constraintlayout.widget.ConstraintLayout>