<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <LinearLayout
        android:id="@+id/image_123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_baseline_announcement_24"
            app:tint="@color/colorPrimary" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="-22dp"
            android:src="@drawable/ic_baseline_123_24"
            app:tint="@color/colorPrimary" />

    </LinearLayout>


    <EditText
        android:id="@+id/et_register_input_code"
        style="@style/edit_text"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/register_hint_default"
        android:maxLines="6"
        android:textColorHint="@color/white_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_we_send" />

    <TextView
        android:id="@+id/tv_register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/enter_text"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_normal_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_123" />

    <TextView
        android:id="@+id/register_text_we_send"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/register_text_we_send"
        app:layout_constraintTop_toBottomOf="@id/tv_register_text_enter_code" />


</androidx.constraintlayout.widget.ConstraintLayout>